--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <img  src="assets/forgot-password.svg" class="frgt-image" alt="Forget Password icon"/>
             <h2 id="forget-section">Odzyskaj hasło</h2>
             
-            <form class="frgt-form" id="forget-form" action="#" method="GET">
+            <form class="frgt-form" id="forget-form" action="#" method="POST">
                 <div class="input-container forget-container">
                     <p class="err-msg hidden" data-for="useremail"></p>
                     <input  class ="forget-input" type="email" id = "forget-username" name = "useremail" autocomplete="off"  placeholder=" " >
