--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="module" src="js/main.js" defer></script>
  
 </head>
-<body class="app dark-theme">
+<body  id="app" class="dark-theme hidden">
 
     
 
@@ -92,7 +92,7 @@
                     </ul>
                     <small class="comp">COMPLETED:</small>
                     <button id="ad-tsk" class="add-task"></button>
-                    <button  id = "logout-btn"class="btn log-out-btn reg-back-btn" >wyloguj</button>
+                    <button  id = "logout-btn"class="btn log-out-btn reg-back-btn" type = "button">wyloguj</button>
                 </div>
         </section>
 
