stylowanie roudmapy pt

--- a/index.html
+++ b/index.html
@@ -471,8 +471,10 @@
         <section id="roadmap-view" class=" modes roadmap-section hidden" aria-labelledby="roadmap-section-title">
   <h4 id="roadmap-section-title" class="tasks">Roadmapa:</h4>
   <div class="roadmap-box">
+    
     <ul id="roadmap-container" class="roadmap-list">
       <li class="roadmap-node">
+        <div class="active-border"></div>
         <div class="acc-btn-container">
             <button class="node-acc-btn " id="roadmap-accordeon-btn">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
