srodka kodowanie ui

--- a/index.html
+++ b/index.html
@@ -473,10 +473,10 @@
      <dialog  id="create-roud-menu" class="roud-modal  hidden" >
         <fieldset class="modal-section">
         <div class="modal-tab-bar">
-            <button class="tab-btn hand-btn" data-mode="manual">Dodaj Ręcznie</button>
-            <button class="tab-btn import-btn" data-mode="import">Importuj</button>
+            <button id="hand-button" class="tab-btn hand-btn" data-mode="manual">Dodaj Ręcznie</button>
+            <button id="import-button" class="tab-btn import-btn" data-mode="import">Importuj</button>
         </div>
-        <form id="manual-node-form" class="manual-content ">
+        <form id="manual-node-form " class="manual-content ">
             <span class="new-roud-title">
                 <h3 id="modal-title">Dodaj Element</h2>
             </span> 
