--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                 </div>
         </section>
         <section id="roadmap-view" class=" modes roadmap-section hidden" aria-labelledby="roadmap-section-title">
-  <h4 id="roadmap-section-title" class="roud-title">Nie masz jeszcze Roudmap</h4>
+  
      <dialog  id="create-roud-menu" class="roud-modal  hidden" >
         <fieldset class="modal-section">
         <div class="modal-tab-bar">
@@ -548,18 +548,37 @@
     </dialog>
   
   <div class="roadmap-box">
+    <div class="list-toggler ">
+        <h4 id="roadmap-section-title" class="roud-title">Nie masz jeszcze Roudmap</h4>
         <div class="roadmap-select-bar">
-            <button class="add-roadmap-btn">Nowa
+            <button id="new-map-btn" class="add-roadmap-btn" type="button">Nowa
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                 </svg>
             </button>
         </div>
         <div class="roadmap-list-container">
-            <ul class="roadmap-list-selector">
-            
+            <ul id="ul-container" class="roadmap-list-selector">
+                <li  class="roadmap-list-item">
+                    <p class="roadmap-list-item-text">Javascrpit</p>
+                    <div class="list-bttns">
+                         <button  class="delete-road-btn roud-list-btns" aria-label="delete task">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                            </svg>
+                        </button>
+                        <button class="enter-road-btn roud-list-btns">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
+                            </svg>
+
+                        </button>
+                    </div>
+                </li>
+                
             </ul>
         </div>
+    </div>
         <dialog id="add-main-roadmap" class="roud-modal hidden">
             <fieldset class="modal-section create-modal">
                 <form  id="create-map-form" class="manual-content ">
