logika dodawania,usuwania,ui, wyboru roadmap

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
   
   <div class="roadmap-box">
     <div class="list-toggler ">
-        <h4 id="roadmap-section-title" class="roud-title">Nie masz jeszcze Roudmap</h4>
+        <h4 id="roadmap-section-title" class="roud-title">Nie masz Roadmap!</h4>
         <div class="roadmap-select-bar">
             <button id="new-map-btn" class="add-roadmap-btn" type="button">Nowa
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
@@ -559,7 +559,7 @@
         </div>
         <div class="roadmap-list-container">
             <ul id="ul-container" class="roadmap-list-selector">
-                <li  class="roadmap-list-item">
+                <!-- <li  class="roadmap-list-item">
                     <p class="roadmap-list-item-text">Javascrpit</p>
                     <div class="list-bttns">
                          <button  class="delete-road-btn roud-list-btns" aria-label="delete task">
@@ -574,7 +574,7 @@
 
                         </button>
                     </div>
-                </li>
+                </li> -->
                 
             </ul>
         </div>
