--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/roudmap.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/utils.css">
+    <script src="https://cdn.jsdelivr.net/npm/leader-line-new/leader-line.min.js" defer></script>
+
     <script type="module" src="js/main.js" defer></script>
  
 </head>
