--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="css/roudmap.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/utils.css">
-    <script src="https://cdn.jsdelivr.net/npm/leader-line-new/leader-line.min.js" defer></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jsplumb@2.15.6/dist/js/jsplumb.min.js" defer></script>
 
     <script type="module" src="js/main.js" defer></script>
+
  
 </head>
 <body  id="app" class="dark-theme  ">
