czwartek cos zrobilem

--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
     <link rel="stylesheet" href="css/roudmap.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/utils.css">
+    <!-- biblioteki: -->
+        <!-- Animate.css: -->
+         <link
+         rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
 
-    <script src="https://cdn.jsdelivr.net/npm/jsplumb@2.15.6/dist/js/jsplumb.min.js" defer></script>
-
+        <!-- JSPLUMb: -->
+    <script defer src="https://cdn.jsdelivr.net/npm/jsplumb@2.15.6/dist/js/jsplumb.min.js" ></script>
+        <!-- anime.js: -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+        <!-- canvas Confetti: -->
+    <script defer src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script> 
+    
+    <!-- MOj JavaScript: -->
     <script type="module" src="js/main.js" defer></script>
 
  
@@ -620,10 +632,10 @@
 
         <div id="add-node-btn-cont" class="add-btn-container hidden">
                 <button id="add-roadmap-task" class="add-task">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
-                    <rect x="4" y="4" width="40" height="40" rx="6" ry="6" fill="none" stroke="#6BCDCE" stroke-width="2"/>
-                    <line x1="24" y1="16" x2="24" y2="32" stroke="#6BCDCE" stroke-width="3" stroke-linecap="round" />
-                    <line x1="16" y1="24" x2="32" y2="24" stroke="#6BCDCE" stroke-width="3" stroke-linecap="round" />
+               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                    <rect  x="4" y="4" width="40" height="40" rx="6" ry="6" fill="none" stroke="#4fa859" stroke-width="2"/>
+                    <line  x1="24" y1="16" x2="24" y2="32" stroke="#4fa859" stroke-width="3" stroke-linecap="round" />
+                    <line  x1="16" y1="24" x2="32" y2="24" stroke="#4fa859" stroke-width="3" stroke-linecap="round" />
                 </svg>
                 </button>
             </div>
