poniedziakowe kodowanie- dodano toasty

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <!-- anime.js: -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
         <!-- canvas Confetti: -->
-    <script defer src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script> 
+    <script defer src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+        <!--  Toastify: -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+
     
     <!-- MOj JavaScript: -->
     <script type="module" src="js/main.js" defer></script>
