poniedziaek animacje modala

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <section id="roadmap-view" class=" modes roadmap-section hidden" aria-labelledby="roadmap-section-title">
   
      <dialog  id="create-roud-menu" class="roud-modal  hidden" >
-        <fieldset class="modal-section">
+        <fieldset  id="modal-ui-panel" class="modal-section hidden">
         <div class="modal-tab-bar">
             <button id="hand-button" class="tab-btn hand-btn" data-mode="manual">Dodaj Ręcznie</button>
             <button id="import-button" class="tab-btn import-btn" data-mode="import">Importuj</button>
