naprawiono animacje oraz bugi, dodadno promt do ai

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     </button>
             </div>
             <div class="helper-footer">
-                <small>Mozesz użyc chatGPT do wygenerowania roudmapy, i ja wkleic</small>
+                <p>Mozesz użyc chatGPT do wygenerowania roudmapy!<br><button type ="button" id="promt-btn"class="text-button">kliknij!</button> aby skopiowac promt.</p>
             </div>
         </form>
             </fieldset>
@@ -604,7 +604,7 @@
         </div>
     </div>
         <dialog id="add-main-roadmap" class="roud-modal hidden">
-            <fieldset class="modal-section create-modal">
+            <fieldset id="creator-panel" class="modal-section create-modal hidden">
                 <form  id="create-map-form" class="manual-content ">
             <span class="new-roud-title">
                 <h3 id="modal-title">Stwórz Roudmape</h3>
